2009-09-30  Matthew Mundell <matthew.mundell@intevation.de>

	* nasl/openvas_logging.c (openvas_log_func): Pass the correct variable to
	dirname.

2009-09-30  Matthew Mundell <matthew.mundell@intevation.de>

	* nasl/openvas_logging.c (openvas_logging_t, load_log_configuration)
	(free_log_configuration): Change the default_level field to a gint
	pointer, so that it's possible to reliably tell if the field was present
	in the log config file.
	(openvas_log_func): Always set the default level from the config if the
	level was present in the log config file (including if the level is 0).

2009-09-29  Matthew Mundell <matthew.mundell@intevation.de>

	* nasl/openvas_logging.c (openvas_log_func): On failure to create the log
	file, ensure that the directory exists and try open the file again.

2009-09-28  Matthew Mundell <matthew.mundell@intevation.de>

	* base/CMakeLists.txt, omp/CMakeLists.txt, nasl/CMakeLists.txt: Set cmake
	minimum required version to 2.6.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Last minute fix.

	* MANIFEST: Updated.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 3.0.0-beta2 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-09-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* Makefile: Removed wrongly placed DESTDIRs.

2009-09-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c, misc/services.c: Resolved libopenvas.h by
	respective single includes.

	* misc/ids_send.h: Added missing include.

2009-09-26  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_create_lsc_credential, omp_delete_lsc_credential): New
	functions.
	* omp/omp.h: Add headers.
